Fixed blue focus outline on ios

--- a/assets/app.css
+++ b/assets/app.css
@@ -551,6 +551,11 @@ body {
     min-height: -webkit-fill-available;
     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   }
+/* Remove outline for non-keyboard :focus */
+*:focus:not(.focus-visible) {
+    outline: none;
+  }
+/* Optional: Customize .focus-visible */
 input[type='number']::-webkit-outer-spin-button,
   input[type='number']::-webkit-inner-spin-button,
   input[type='number'] {
